--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,10 @@
     <!-- <uses-permission android:name="android.permission.GET_ACCOUNTS" /> -->
     <!-- <uses-permission android:name="android.permission.READ_PROFILE" /> -->
     <!-- <uses-permission android:name="android.permission.READ_CONTACTS" /> -->
+    <!--<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
+    <!--<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>-->
     <uses-permission android:name="android.permission.INTERNET" />
+    <!--<uses-permission android:name="android.permission.CAMERA" />-->
 
     <application
         android:allowBackup="true"
@@ -14,14 +17,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.LinkToStoreActivity">
-
-        </activity>
+        <activity android:name=".activity.LinkToStoreActivity"></activity>
         <activity android:name=".activity.AddProductActivity" />
-        <activity android:name=".activity.OverviewStoreActivity"></activity>
-        <activity android:name=".activity.LinkToShopeeActivity">
+        <activity android:name=".activity.OverviewStoreActivity">
 
         </activity>
+        <activity android:name=".activity.LinkToShopeeActivity"></activity>
         <activity android:name=".activity.IntroduceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
