--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
     <!-- <uses-permission android:name="android.permission.GET_ACCOUNTS" /> -->
     <!-- <uses-permission android:name="android.permission.READ_PROFILE" /> -->
     <!-- <uses-permission android:name="android.permission.READ_CONTACTS" /> -->
-    <!--<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
-    <!--<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <!--<uses-permission android:name="android.permission.CAMERA" />-->
 
@@ -20,15 +20,15 @@
         <activity android:name=".activity.LinkToStoreActivity"></activity>
         <activity android:name=".activity.AddProductActivity" />
         <activity android:name=".activity.OverviewStoreActivity">
-
-        </activity>
-        <activity android:name=".activity.LinkToShopeeActivity"></activity>
-        <activity android:name=".activity.IntroduceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.LinkToShopeeActivity"></activity>
+        <activity android:name=".activity.IntroduceActivity">
+
         </activity>
         <activity android:name=".activity.LoginExampleActivity" />
         <activity android:name=".activity.LoginActivity" />
