--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,11 +31,11 @@
         <activity android:name=".activity.LinkToStoreActivity" />
         <activity android:name=".activity.AddProductActivity" />
         <activity android:name=".activity.OverviewStoreActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
         </activity>
         <activity android:name=".phung.testactivity.TestUploadImage">
             <!--<intent-filter>-->
