--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.ImageLibraryActivity"></activity>
+        <activity android:name=".activity.ForgotPasswordActivity"></activity>
+        <activity android:name=".activity.ImageLibraryActivity" />
         <activity android:name=".phung.testactivity.TestCallAPI">
 
             <!-- <intent-filter> -->
